fixed services layout on mobile scale

--- a/src/components/AboutMe/index.css
+++ b/src/components/AboutMe/index.css
@@ -40,7 +40,7 @@
 }
 @media only screen and (max-width: 600px) {
   .bio-pic{
-    height: 200px;
+    height: 300px;
     width: 45%;
     border-radius: 100%;
     border: 1px solid black;
@@ -60,8 +60,8 @@
   }
   .caller{
     position: absolute;
-    margin: -1% 0 0 6%;
-    width: 31%;
+    margin: 1% 0 0 0%;
+    width: 45%;
     font-weight: 600;
   }
 }
